@@ -33,7 +33,8 @@ class PyQtConfiguration(Hook):
              "browse_cards_dlg_state": None,
              "browse_cards_dlg_splitter_1_state": None,
              "browse_cards_dlg_splitter_2_state": None,
-             "browse_cards_dlg_table_settings": None,   
+             "browse_cards_dlg_table_settings": None,
+             "browse_cards_dlg_sorting_warning_shown": False,
              "statistics_dlg_state": None,
              "configuration_dlg_state": None,
              "activate_cards_dlg_state": None,
