@@ -29,6 +29,8 @@ class ConfigurationWdgtMain(QtGui.QWidget, Ui_ConfigurationWdgtMain,
             self.scheduled_cards.setCurrentIndex(0)
         self.non_memorised_cards.setValue(self.config()\
             ["non_memorised_cards_in_hand"])
+        self.save_after_n_reps.setValue(self.config()\
+            ["save_after_n_reps"])        
         if self.config()["memorise_sister_cards_on_same_day"] == True:
             self.memorise_sister_cards_on_same_day.setCheckState(\
                 QtCore.Qt.Checked)
@@ -52,6 +54,7 @@ class ConfigurationWdgtMain(QtGui.QWidget, Ui_ConfigurationWdgtMain,
         self.new_cards.setCurrentIndex(0)
         self.scheduled_cards.setCurrentIndex(0)
         self.non_memorised_cards.setValue(10)
+        self.save_after_n_reps.setValue(10)
         self.memorise_sister_cards_on_same_day.setCheckState(\
                 QtCore.Qt.Unchecked)
         self.media_autoplay.setCheckState(QtCore.Qt.Checked)
@@ -69,6 +72,8 @@ class ConfigurationWdgtMain(QtGui.QWidget, Ui_ConfigurationWdgtMain,
             self.config()["randomise_scheduled_cards"] = False
         self.config()["non_memorised_cards_in_hand"] = \
             self.non_memorised_cards.value()
+        self.config()["save_after_n_reps"] = \
+            self.save_after_n_reps.value()
         if self.memorise_sister_cards_on_same_day.checkState() == \
            QtCore.Qt.Checked:
             self.config()["memorise_sister_cards_on_same_day"] = True
